--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,20 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.7.3</version> <!-- Укажите актуальную версию -->
+        </dependency>
+        
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.27</version> <!-- Укажите актуальную версию -->
+        </dependency>
+
+
     </dependencies>
 
     <build>
