--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto = update
 logging.file.path=logs
+
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:keystore/rest-server-key.p12
+server.ssl.key-alias=rest-server
+server.port=8443
