--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/EquipmentDB
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.open-in-view=false
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto = update
 logging.file.path=logs
 
